[package]
name = "pleiades"
version = "3.0.0-alpha"
authors = ["Sienna Lloyd", "Pleiades Authors"]
description = "A lightning-fast constellation mesh"
license = "GPL-3.0-only"
keywords = ["kv", "distributed-systems", "raft", "constellation", "mesh"]
homepage = "https://review.r3t.io/nova/pleiades"
repository = "https://review.r3t.io/nova/pleiades"
readme = "README.md"
edition = "2021"
publish = false

[workspace]
members = ["crates/*"]

[dependencies]
bytes = "1.5.0"
mimalloc = { version = "*", default-features = false }
moka = { version = "0.12.1", features = ["sync"] }
nova-api = { path = "crates/nova-api" }
openraft = "0.8.3"
prost = "0.12.1"
protobuf = {version = "2" }
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.189", features = ["derive"] }
sysinfo = "0.29.10"
