[package]
name = "harness"
version = "0.1.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = []
repository = "https://github.com/pingcap/raft-rs/harness"
readme = "README.md"
homepage = "https://github.com/pingcap/raft-rs/harness"
description = "A testing harness for Raft."
categories = []
edition = "2018"

[features]
default = ["nova-raft/default-logger"]
# Enable failpoints
failpoints = ["fail/failpoints"]

# Make sure to synchronize updates with Raft.
[dependencies]
nova-raft = { path = "..", default-features = false }
nova-api = { path = "../proto", default-features = false }
fail = { version = "0.4", optional = true }
rand = "0.8"
slog = "2.2"

[dev-dependencies]
criterion = "0.3"
fxhash = "0.2.1"
lazy_static = "1"
protobuf = "2"
regex = "1"
